// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switcher snapshots checked 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_checked QxSwitcher_color_brand QxSwitcher_position_left css-vhioa4-QxSwitcher-root"
  >
    <input
      checked=""
      class="QxSwitcher-input css-l734dd-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1nbamv2-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1t5k4kc-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-1l3e5z1-QxSwitcher-content"
    >
      Switcher
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher snapshots color_brand 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_left css-vhioa4-QxSwitcher-root"
  >
    <input
      class="QxSwitcher-input css-nqu1gl-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-8xldro-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-t65zul-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-1l3e5z1-QxSwitcher-content"
    >
      Switcher
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher snapshots color_danger 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_danger QxSwitcher_position_left css-vhioa4-QxSwitcher-root"
  >
    <input
      class="QxSwitcher-input css-3nzwjc-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1ez7a4f-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-kswp3k-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-1l3e5z1-QxSwitcher-content"
    >
      Switcher
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher snapshots color_info 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_info QxSwitcher_position_left css-vhioa4-QxSwitcher-root"
  >
    <input
      class="QxSwitcher-input css-3nzwjc-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-d9c9gc-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-16w0ojw-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-1l3e5z1-QxSwitcher-content"
    >
      Switcher
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher snapshots color_secondary 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_secondary QxSwitcher_position_left css-vhioa4-QxSwitcher-root"
  >
    <input
      class="QxSwitcher-input css-nqu1gl-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-8xldro-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-t65zul-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-1l3e5z1-QxSwitcher-content"
    >
      Switcher
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher snapshots color_success 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_success QxSwitcher_position_left css-vhioa4-QxSwitcher-root"
  >
    <input
      class="QxSwitcher-input css-3nzwjc-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-17qetkm-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1o8o7jk-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-1l3e5z1-QxSwitcher-content"
    >
      Switcher
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher snapshots color_warning 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_warning QxSwitcher_position_left css-vhioa4-QxSwitcher-root"
  >
    <input
      class="QxSwitcher-input css-3nzwjc-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-85tozd-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1vfzg2j-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-1l3e5z1-QxSwitcher-content"
    >
      Switcher
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher snapshots default 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_left css-vhioa4-QxSwitcher-root"
  >
    <input
      class="QxSwitcher-input css-nqu1gl-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-8xldro-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-t65zul-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-1l3e5z1-QxSwitcher-content"
    >
      Switcher
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher snapshots disabled 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_disabled QxSwitcher_position_left css-1k2y62n-QxSwitcher-root"
  >
    <input
      class="QxSwitcher-input css-nqu1gl-QxSwitcher-input"
      disabled=""
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1a6eus6-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-18nmlbv-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-1l3e5z1-QxSwitcher-content"
    >
      Switcher
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher snapshots large 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_large QxSwitcher_color_brand QxSwitcher_position_left css-vhioa4-QxSwitcher-root"
  >
    <input
      class="QxSwitcher-input css-nqu1gl-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1oh5429-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-tf5mmy-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-w4zvls-QxSwitcher-content"
    >
      Switcher
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher snapshots medium 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_left css-vhioa4-QxSwitcher-root"
  >
    <input
      class="QxSwitcher-input css-nqu1gl-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-8xldro-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-t65zul-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-1l3e5z1-QxSwitcher-content"
    >
      Switcher
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher snapshots right 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_right css-vhioa4-QxSwitcher-root"
  >
    <div
      class="QxSwitcher-content css-62pq4b-QxSwitcher-content"
    >
      Switcher
    </div>
    <input
      class="QxSwitcher-input css-nqu1gl-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-8xldro-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-t65zul-QxSwitcher-toggle"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher snapshots small 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_small QxSwitcher_color_brand QxSwitcher_position_left css-vhioa4-QxSwitcher-root"
  >
    <input
      class="QxSwitcher-input css-nqu1gl-QxSwitcher-input"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1rut7ph-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-19tqbzf-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-dc0ipp-QxSwitcher-content"
    >
      Switcher
    </div>
  </label>
</DocumentFragment>
`;
